[package]
name = "list-load"
version = "0.1.0"
authors = ["leocavalcante <lc@leocavalcante.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
rust-s3 = "0.19"
regex = "1.3"

[lib]
name = "list_load"
path = "src/lib.rs"

[[bin]]
name = "upload"
path = "bin/upload.rs"

[[bin]]
name = "import"
path = "bin/import.rs"